updates for spre 3.0

--- a/app/views/spree/stock_emails_mailer/stock_email.html.erb
+++ b/app/views/spree/stock_emails_mailer/stock_email.html.erb
@@ -118,7 +118,7 @@
                   <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateBody">
                     <tr>
                       <td valign="top" class="bodyContent">
-                        We're pleased to let you know that <%= @stock_email.product.name %> is back in stock  — if you need help with sizes or have questions, please call, email, or chat and we'll do our best.
+                        We're pleased to let you know that <%= @stock_email.variant.name %> is back in stock  — if you need help with sizes or have questions, please call, email, or chat and we'll do our best.
                       </td>
                     </tr>
                   </table>
