--- a/app/views/spree/stock_emails/create.js.erb
+++ b/app/views/spree/stock_emails/create.js.erb
@@ -1,6 +1,3 @@
 <% if flash[:success].present? %>
-	$('.input-group > #stock_notify_email').parent().html('<% flash[:success] %>');
-	$('.input-group > #stock_notify_email').val('');
-<% else %>
-	$('.input-group > #stock_notify_email').parent().html('<% flash[:info] %>');
+	$('.input-group > #stock_notify_email').parent().html('<%= flash[:success] %>');
 <% end %>
